[gd_scene load_steps=9 format=3 uid="uid://bocxnycb2lq6a"]

[ext_resource type="Script" path="res://rocket2/char_rocket2.gd" id="1_17x10"]
[ext_resource type="Texture2D" uid="uid://pvojojjs1e77" path="res://rocket2/spr_rocket2.png" id="2_h8kqu"]
[ext_resource type="PackedScene" uid="uid://p4fylv113cjt" path="res://weapon_default/obj_weapon_default.tscn" id="2_vb1bg"]
[ext_resource type="AudioStream" uid="uid://bkfdv6pqemyoo" path="res://rocket2/snd_thrust_fwd.mp3" id="3_nv618"]
[ext_resource type="AudioStream" uid="uid://dyscxlxrsbmsq" path="res://rocket2/snd_thrust_reverse.wav" id="4_wrh3y"]

[sub_resource type="Curve" id="Curve_p87dh"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0, -0.336853), 0.0, 0.0, 0, 0, Vector2(0.925558, 1.85263), 0.0, 0.0, 0, 0, Vector2(1, -0.336853), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_vplkr"]
offsets = PackedFloat32Array(0, 0.585106)
colors = PackedColorArray(1, 1, 1, 1, 0.0941176, 0.0941176, 0.0941176, 0.741176)

[sub_resource type="GDScript" id="GDScript_6nijc"]
script/source = "extends AudioStreamPlayer2D


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[node name="char_rocket2" type="CharacterBody2D"]
position = Vector2(951, 501)
scale = Vector2(0.6, 0.6)
script = ExtResource("1_17x10")

[node name="obj_weapon_default" parent="." instance=ExtResource("2_vb1bg")]
position = Vector2(101.667, -3.33335)

[node name="prt_thrust" type="CPUParticles2D" parent="."]
position = Vector2(-91, 0)
scale = Vector2(0.6, 0.6)
amount = 2000
lifetime = 0.5
emission_shape = 1
emission_sphere_radius = 10.0
direction = Vector2(2.08165e-12, 2.08165e-12)
spread = 40.91
gravity = Vector2(-350, 2.08165e-12)
initial_velocity_min = 10.0
initial_velocity_max = 10.0
radial_accel_min = -100.0
radial_accel_max = -34.54
radial_accel_curve = SubResource("Curve_p87dh")
scale_amount_min = 0.0
color = Color(1, 0.521569, 0.356863, 0.815686)
color_ramp = SubResource("Gradient_vplkr")
hue_variation_min = 0.54
hue_variation_max = 0.54

[node name="spr_rocket2" type="Sprite2D" parent="."]
position = Vector2(-33, -1)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_h8kqu")

[node name="col_poly_rocket2" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(-33.6182, 18)
scale = Vector2(0.90404, 1)
polygon = PackedVector2Array(-69.0034, 74, 145.589, -18, -64.5788, -108, -35.819, -17)

[node name="snd_thrust_fwd" type="AudioStreamPlayer2D" parent="."]
scale = Vector2(0.6, 0.6)
stream = ExtResource("3_nv618")
script = SubResource("GDScript_6nijc")

[node name="snd_thrust_reverse" type="AudioStreamPlayer2D" parent="."]
scale = Vector2(0.6, 0.6)
stream = ExtResource("4_wrh3y")
script = SubResource("GDScript_6nijc")
